<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2018, 2023 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Distribution License v. 1.0, which is available at
    http://www.eclipse.org/org/documents/edl-v10.php.

    SPDX-License-Identifier: BSD-3-Clause

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>cl.nic.dte</groupId>
    <artifactId>jakarta.xml.bind-api</artifactId>
    <version>4.0.2</version>
    <packaging>jar</packaging>
    <name>Jakarta XML Binding API</name>
    <description>Biblioteca XML para Nic Chile</description>
    <url>https://github.com/repo-por-definir</url>
    <licenses>
        <license>
            <name>Eclipse Distribution License v. 1.0</name>
            <url>http://www.eclipse.org/org/documents/edl-v10.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>Equipo</id>
            <name>Equipo17 Ing Soft</name>
            <email>equipo@gmail.com</email>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>4.0.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.santuario</groupId>
            <artifactId>xmlsec</artifactId>
            <version>3.0.3</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>4.0.5</version>
            <exclusions>
                <exclusion>
                    <groupId>jakarta.xml.bind</groupId>
                    <artifactId>jakarta.xml.bind-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>jakarta.activation</groupId>
            <artifactId>jakarta.activation-api</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.13.4</version>
        </dependency>
        <!-- Provider (crypto primitives) -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>1.81</version>
        </dependency>

        <!-- PKIX + PEM (PEMParser, JcaPEMKeyConverter, etc.) -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>1.81</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.moxy -->
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.moxy</artifactId>
            <version>4.0.8</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <dependency>
		    <groupId>org.apache.xmlgraphics</groupId>
		    <artifactId>fop</artifactId>
		    <version>2.9</version>
		</dependency>

        <!-- Apache Xerces para parsing XML -->
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.2</version>
        </dependency>

        <!-- XML APIs (necesario para Xerces) -->
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
        </dependency>

        <!-- Apache Xalan para transformaciones XSLT -->
        <dependency>
            <groupId>xalan</groupId>
            <artifactId>xalan</artifactId>
            <version>2.7.3</version>
        </dependency>
        
        <!-- Serializer (necesario para Xalan) -->
        <dependency>
            <groupId>xalan</groupId>
            <artifactId>serializer</artifactId>
            <version>2.7.3</version>
        </dependency>
        <!-- Dependencias para EnvioApi-->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.4</version>
        </dependency>
        <!-- XML Beans por sus Excepciones -->
        <dependency>
            <groupId>org.apache.xmlbeans</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>5.3.0</version>
        </dependency>
        <!-- Jakarta SOAP API -->
        <dependency>
            <groupId>jakarta.xml.soap</groupId>
            <artifactId>jakarta.xml.soap-api</artifactId>
            <version>3.0.2</version>
        </dependency>

        <!-- SAAJ implementation (runtime) -->
        <dependency>
            <groupId>com.sun.xml.messaging.saaj</groupId>
            <artifactId>saaj-impl</artifactId>
            <version>3.0.4</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Apache HttpClient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.14</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                </configuration>
            </plugin>
            <!-- <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
            </plugin> -->
            <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>run-envio</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>java</executable>
							<arguments>
								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</argument>
								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
								<argument>-classpath</argument>
								<classpath/>
								<argument>src/main/java/SiiEnvioApi.EnviaDocumento</argument>
								<argument>-c</argument>
								<argument>certABC.pfx</argument>
								<argument>-s</argument>
								<argument>contraseña</argument>
								<argument>-f</argument>
								<argument>60910000-1</argument>
								<argument>envioprueba2.xml</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
				<groupId>org.jvnet.jaxb</groupId>
				<artifactId>jaxb-maven-plugin</artifactId>
				<version>4.0.8</version>
				<executions>
					<execution>
						<id>generate-sii-schemas</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<schemaDirectory>${project.basedir}/src/main/java/SiiEnvio/schemas</schemaDirectory>
							<schemaIncludes>
								<include>*.xsd</include>
							</schemaIncludes>
							<schemaExcludes>
								<exclude>**/*.xsdconfig</exclude>
							</schemaExcludes>
							<generatePackage>SiiEnvio.generatedClasses.cl.sii.siiDte</generatePackage>
							<generateDirectory>${project.basedir}/src/main/java/</generateDirectory>
							<extension>true</extension>
							<strict>false</strict>
							<verbose>true</verbose>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>jakarta.xml.bind</groupId>
						<artifactId>jakarta.xml.bind-api</artifactId>
						<version>4.0.2</version>
					</dependency>
				</dependencies>
			</plugin>
        </plugins>
    </build>
</project>